[package]
name = "oro-client"
version = "0.3.34"
description = "Generic client for the HTTP NPM api."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
oro-common = { version = "=0.3.34", path = "../oro-common" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true, features = ["io-compat"] }
indexmap = { workspace = true }
miette = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "stream"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
task-local-extensions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http-cache-reqwest = { workspace = true }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
