[package]
name = "oro-command"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
oro-config = { path = "../oro-config" }
oro-command-derive = { path = "../oro-command-derive" }

anyhow = "1.0.24"
clap = { git = "https://github.com/zkat/clap" }
async-trait = "0.1.19"
