[package]
name = "oro-common"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.11.2"
miette = { workspace = true }
node-semver = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
