[package]
name = "oro-common"
version = "0.3.10"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Common types and utilities for Orogene."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"

[dependencies]
derive_builder = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
