[package]
name = "oro-common"
version = "0.3.34"
description = "Common types and utilities for Orogene."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
derive_builder = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
miette = { workspace = true }
node-semver = { workspace = true }
nom = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
