[package]
name = "oro-config-derive"
version = "0.3.16"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Derive macros for configuration management for Orogene."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"
rust-version = "1.67.1"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
