[package]
name = "oro-config"
version = "0.3.11"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Configuration management for Orogene."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"

[dependencies]
oro-config-derive = { version = "=0.3.11", path = "../oro-config-derive" }

clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
