[package]
name = "oro-config"
version = "0.3.17"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Configuration management for Orogene."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"
rust-version = "1.67.1"

[dependencies]
clap = { workspace = true, features = ["string"] }
config = { workspace = true, default-features = false }
kdl = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
