[package]
name = "oro-config"
version = "0.3.34"
description = "Configuration management for Orogene."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["string"] }
config = { workspace = true, default-features = false }
kdl = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
