[package]
name = "oro-manifest"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-semver = { path = "../oro-semver", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
nom = "5.0.1"
thiserror = "1.0.20"
derive_builder = "0.9.0"

[dev-dependencies]
anyhow = "1.0.32"
