[package]
name = "oro-manifest"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-node-semver = { path = "../oro-node-semver" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
nom = "5.0.1"
thiserror = "1.0.20"
derive_builder = "0.9.0"

[dev-dependencies]
anyhow = "1.0.32"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
