[package]
name = "oro-manifest"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-common = { path = "../oro-common" }
serde_json = { version = "1.0.73", features = ["preserve_order"] }
nom = "7.1.0"
derive_builder = "0.10.2"

serde = "1.0.126"

[dev-dependencies]
anyhow = "1.0.32"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
