[package]
name = "oro-node-semver"
version = "0.1.0"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-diagnostics = { path = "../oro-diagnostics" }
oro-diagnostics-derive = { path = "../oro-diagnostics/oro-diagnostics-derive" }

nom = "6.0.0"
thiserror = "1.0.9"
serde = "1.0.115"
bytecount = "0.6.0"

[dev-dependencies]
serde_json = "1.0.57"
serde_derive = "1.0.115"
pretty_assertions = "0.6.1"
