[package]
name = "oro-npm-account"
version = "0.3.29"
description = "Configure access token and execute the login process."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
oro-client = { version = "=0.3.29", path = "../oro-client" }

async-std = { workspace = true }
base64 = { workspace = true }
dialoguer = { workspace = true }
open = { workspace = true }
reqwest = { workspace = true }
kdl = { workspace = true }
url = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
