[package]
name = "oro-pack"
version = "0.1.0"
authors = ["Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-manifest = { path = "../oro-manifest" }
ignore = "0.4"
serde_json = "1.0"
tempdir = "0.3"
