[package]
name = "oro-pack"
version = "0.1.0"
authors = ["Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-manifest = { path = "../oro-manifest" }
gitignored = "0.3.1"
serde_json = "1.0"
regex = "1.3.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
