[package]
name = "oro-pack"
version = "0.1.0"
authors = ["Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-manifest = { path = "../oro-manifest" }
gitignored = "0.4.0"
serde_json = "1.0"
walkdir = "2"
async-tar = "0.3.0"
async-std = "1.6.5"

[dev-dependencies]
tempfile = "3"
