[package]
name = "oro-package-spec"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

[dependencies]
bytecount = "0.6.0"
miette = { workspace = true }
node-semver = { workspace = true }
nom = { workspace = true }
percent-encoding = "2.1.0"
thiserror = { workspace = true }
url = { workspace = true }
