[package]
name = "oro-package-spec"
version = "0.3.3"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "NPM package specification parsing and manipulation."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"

[dependencies]
bytecount = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
nom = { workspace = true }
percent-encoding = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
