[package]
name = "oro-package-spec"
version = "0.3.33"
description = "NPM package specification parsing and manipulation."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
bytecount = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
nom = { workspace = true }
percent-encoding = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
