[package]
name = "oro-script"
version = "0.3.33"
description = "Execute scripts for NPM packages."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
oro-common = { version = "=0.3.33", path = "../oro-common" }

dunce = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
